<resources>
    <string name="app_name">GOT</string>

    <!-- Strings Character Info -->
    <string name="Primeiro_Nome_Character_Info">First Name</string>
    <string name="Sobrenome_Character_Info">Last Name</string>
    <string name="Titulo_Character_Info">Title</string>
    <string name="Familia_Character_Info">Family</string>
    <string name="Edit_Character_Info">Edit</string>
    <string name="Change_Information">Change Information</string>


    <string name="title_activity_home">HomeActivity</string>

    <!-- Strings Bottom Nav Menu -->
    <string name="title_character">Characters</string>
    <string name="title_continent">Continents</string>
    <string name="title_notifications">Notifications</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>