<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_character">

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.example.got.view.ui.characters.CharactersFragment"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/navigation_continent"
        android:name="com.example.got.view.ui.continents.ContinentsFragment"
        android:label="@string/title_continent"
        tools:layout="@layout/fragment_continent" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.got.view.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>